# py.airport.pydantic

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.docs/: .mkdocs.yml  index.md
.github/: FUNDING.yml
.github/workflows/: build_deploy.yml
.lab/: test.ipynb
omnicloud/airport/pydantic/: __init__.py
omnicloud/airport/pydantic/models/: __init__.py  _simple.py
omnicloud/airport/pydantic/terminals/: __init__.py
omnicloud/airport/pydantic/terminals/_base_model/: __init__.py
omnicloud/airport/pydantic/terminals/_base_model/_local/: __init__.py  json.py
omnicloud/airport/pydantic/tools/: __init__.py  errors.py  json.py  models.py  warnings.py
